deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: spacystreamlit
 labels:
   app: streamlit
spec:
 selector:
   matchLabels:
     app: streamlit
     tier: web
 template:
   metadata:
     labels:
       app: streamlit
       tier: web
   spec:
      containers:
      - image: streamlitspacyregistry.azurecr.io/streamlit-spacy:latest
        imagePullPolicy: Always
        name: streamlit-spacy
        ports:
        - containerPort: 8501
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
      imagePullSecrets:
      - name: regcred
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
